gd_internal_course_tasks/task_ingress/nginx3/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world
        image: quay.io/myafk/interactive:stable
        command: ["interactive", "ingress"]
        ports:
        - containerPort: 8085
